# mas-indigo-ros

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.b4130fb  README.md  TAR1769.tgz  mrta_vc-ros-uml.dia  mrta_vc.files  mrta_vc.includes  package.xml  task_builder_sm.dia  task_sm.eps  task_state_machine.dia
dic/: objects.dic  (+3 more)
mas/: CMakeLists.txt  package.xml
mas/include/utilities/: math_manipulator.h  ros_message.h  string_manipulator.h  time_manipulator.h
mas/others/: capability_evaluator.dia  mrta-v2-ros-uml.dia  mrta-v2.dia
mas/src/utilities/: math_manipulator.cpp  string_manipulator.cpp  time_manipulator.cpp
mas_actions/: CMakeLists.txt  package.xml
mas_actions/action/: Execute.action
mas_agents/: CMakeLists.txt  package.xml
mas_agents/include/mas_agents/: SystemUserInterfaceNode.h  system_user_interface_node.h
mas_agents/launch/: adrianohrl.launch  audeliano.launch  heverton.launch  luis.launch  user.launch  vc_adrianohrl.launch  vc_audeliano.launch  vc_heverton.launch  vc_luis.launch  voice_commander.launch
mas_agents/src/: SystemUserInterfaceNode.cpp  system_user_interface_node.cpp
mas_agents/src/mas_agents/: system_user_interface_node.cpp
mas_database/: CMakeLists.txt  package.xml
mas_database/include/mas_database/: SystemDatabaseInterfaceNode.h  system_database_interface_node.h
mas_database/include/mrta_vc/: SystemDatabaseInterfaceNode.h
mas_database/launch/: master.launch
mas_database/src/: SystemDatabaseInterfaceNode.cpp  system_database_interface_node.cpp
mas_database/src/mas_database/: system_database_interface_node.cpp
mas_launches/: CMakeLists.txt  package.xml
mas_launches/launch/: sr_mu_sys.launch
mas_lib/: CMakeLists.txt  HEADER_FILES  SOURCE_FILES  package.xml
mas_lib/include/utilities/: MathManipulator.h  StringManipulator.h  TimeManipulator.h
mas_lib/src/agents/: Agent.cpp  Computer.cpp  HierarchyLevels.cpp  Person.cpp  Robot.cpp  User.cpp
mas_lib/src/places/: Building.cpp  Campus.cpp  Desk.cpp  ExternalArea.cpp  Floor.cpp  Location.cpp  Office.cpp  Place.cpp
mas_lib/src/state_machine/: AbstractState.cpp  MachineController.cpp  PersonVerificationState.cpp  S0InitialState.cpp  S1TaskVerificationState.cpp  S2TaskVerificationState.cpp  S3TaskVerificationState.cpp  S4SenderVerificationState.cpp  S5SenderVerificationState.cpp  S6ReceiverVerificationState.cpp  S7PriorityVerificationState.cpp  S8DeadlineVerificationState.cpp  S9FinalState.cpp  SenderVerificationState.cpp  TaskVerificationState.cpp
mas_lib/src/system/: DatabaseInterface.cpp  EntityTypes.cpp  TaskAllocator.cpp
mas_lib/src/tasks/: Allocation.cpp  AllocationSatisfactions.cpp  AllocationStates.cpp  Resource.cpp  Skill.cpp  SkillLevels.cpp  Task.cpp  TaskPriorities.cpp
mas_lib/src/utilities/: MathManipulator.cpp  StringManipulator.cpp  TimeManipulator.cpp
mas_msgs/: CMakeLists.txt  package.xml
mas_msgs/mmsg/: Agent.mmsg  Computer.mmsg  Person.mmsg  Robot.mmsg  User.mmsg
mas_msgs/msg/: Agent.msg  Allocation.msg  Computer.msg  Person.msg  Place.msg  Robot.msg  Skill.msg  Task.msg  User.msg
mas_srvs/: CMakeLists.txt  package.xml
mas_srvs/srv/: FinishAllocation.srv  GetComputer.srv  GetPerson.srv  GetRobot.srv  GetTask.srv  GetUser.srv  SetUser.srv  ValidatePassword.srv
mas_task_builder/: CMakeLists.txt  package.xml
mas_task_builder/include/mas_task_builder/: TaskBuilderNode.h
mas_task_builder/include/mrta_vc/: TaskBuilderNode.h
mas_task_builder/launch/: task_builder.launch
mas_task_builder/src/: TaskBuilderNode.cpp  task_builder_node.cpp
mas_test/: CMakeLists.txt  package.xml
mas_test/src/: capability_parser_test.cpp
mrs/mrs/: CMakeLists.txt  package.xml
mrs/mrs_actions/: CMakeLists.txt  package.xml
mrs/mrs_actions/action/: Execute.action
mrs/mrs_agents/: CMakeLists.txt  package.xml
mrs/mrs_agents/launch/: p3_dx.launch  robot.launch  robotino1.launch  robotino2.launch  robotino3.launch
mrs/mrs_agents/src/: SystemRobotInterfaceNode.cpp  system_robot_interface_node.cpp
mrs/mrs_msgs/: CMakeLists.txt  package.xml
mrs/mrs_msgs/mmsg/: Agent.mmsg  Computer.mmsg  Person.mmsg  Robot.mmsg  User.mmsg
mrs/mrs_msgs/msg/: Agent.msg  Allocation.msg  Capability.msg  Computer.msg  Person.msg  Place.msg  Robot.msg  Skill.msg  Task.msg  User.msg
mrs/mrs_srvs/: CMakeLists.txt  package.xml
mrs/mrs_srvs/srv/: GenerateNewId.srv  GetComputer.srv  GetPerson.srv  GetRobot.srv  GetTask.srv  GetUser.srv  SetUser.srv  ValidatePassword.srv
mrs/mrta/: CMakeLists.txt  package.xml
mrs/mrta/config/: mrta_dashboard.perspective
mrs/mrta/launch/: debug_master.launch  master.launch
mrs/mrta/src/: SystemManagerNode.cpp  system_manager_node.cpp
mrta/: CMakeLists.txt  package.xml
mrta/config/: p3_dx.yaml
mrta/include/mrta_vc/: SystemRobotInterfaceNode.h  SystemUserInterfaceNode.h
mrta/launch/: adrianohrl.launch  debug_master.launch  rec_test.launch  robotino1.launch  user.launch
mrta/others/: allocation_sm.dia
mrta/src/: SpeechAnalyserNode.cpp  SystemRobotInterfaceNode.cpp  TaskBuilderNode.cpp  task_builder_node.cpp
mrta_vc/: CMakeLists.txt  package.xml
mrta_vc/action/: Execute.action
mrta_vc/msg/: Skill.msg
mrta_vc/srv/: GetTask.srv  GetUser.srv  SetUser.srv
mrta_vc_lib/: CMakeLists.txt  HEADER_FILES  SOURCE_FILES  package.xml
mrta_vc_lib/src/: hello_world.cpp  hello_world_node.cpp
mrta_vc_lib/src/agents/: Agent.cpp  Robot.cpp
mrta_vc_lib/src/places/: Floor.cpp  Place.cpp
mrta_vc_lib/src/state_machine/: S5SenderVerificationState.cpp  S7PriorityVerificationState.cpp  S8DeadlineVerificationState.cpp  SenderVerificationState.cpp
mrta_vc_lib/src/system/: AllocationManager.cpp  EntityTypes.cpp
mrta_vc_lib/src/tasks/: TaskPriorities.cpp
mrta_vc_lib/src/utilities/: StringManipulator.cpp
mrta_vc_stack/: CMakeLists.txt  package.xml
speech_analyser/: CMakeLists.txt  package.xml
speech_analyser/config/: christiano_pc.yaml  robotino3.yaml
speech_analyser/include/mrta_vc/: SpeechAnalyserNode.h
speech_analyser/launch/: speech_analyser.launch
speech_analyser/src/: SpeechAnalyserNode.cpp  speech_analyser_node.cpp
(+446 files in other folders)
