<?xml version="1.0"?>
<package>
	<name>mrta_vc</name>
	<version>0.0.0</version>
	<description>The mrta_vc package</description>
	<maintainer email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
	<!--maintainer email="c.h.rezende@hotmail.com">Christiano Henrique Rezende</maintainer>
	<maintainer email="luis-bonin@hotmail.com">Luís Victor Pessiqueli Bonin</maintainer>
	<maintainer email="sm.heverton@gmail.com">Héverton Machado Soares</maintainer-->
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>geometry_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>geometry_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>std_msgs</run_depend>

	<export>
	</export>
</package>
