<?xml version="1.0"?>
<package>
	<name>mas</name>
	<version>1.2.1</version>
	<description>The Multi-Agent System metapackage</description>
	<author email="adrianohrl@gmail.com">Adriano Henrique Rossette Leite</author>
	<maintainer email="expertinos.unifei@gmail.com">Expertinos UNIFEI</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<run_depend>mas_actions</run_depend>
	<run_depend>mas_lib</run_depend>
	<run_depend>mas_msgs</run_depend>
	<run_depend>mas_srvs</run_depend>
	<run_depend>mrs</run_depend>

	<export>
		<metapackage/>
	</export>
</package>
