<?xml version="1.0"?>
<package>
  <name>mas</name>
  <version>1.4.0</version>
  <description>The modular Multi-Agent System ROS library</description>
  <author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>
  <maintainer email="expertinos.unifei@gmail.com">Expertinos UNIFEI</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>mas_msgs</build_depend>
  <build_depend>mas_srvs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>mas_msgs</run_depend>
  <run_depend>mas_srvs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
</package>
