<?xml version="1.0"?>
<package>
	<name>mas_actions</name>
	<version>1.2.1</version>
	<description>The Multi-Agent System actions definition package</description>
	<author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>
	<maintainer email="expertinos.unifei@gmail.com">Expertinos UNIFEI</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>actionlib_msgs</build_depend>
	<build_depend>genmsg</build_depend>
  	<build_depend>mas_msgs</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>

	<run_depend>actionlib_msgs</run_depend>
	<run_depend>mas_msgs</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>
</package>
