<?xml version="1.0"?>
<package>
	<name>mas_launches</name>
	<version>1.2.3</version>
	<description>The Multi-Agent System Examples</description>
	<author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>
	<maintainer email="expertinos.unifei@gmail.com">Expertinos Autonomous Robotics Team</maintainer>
	<license>BSD</license>

	<buildtool_depend>catkin</buildtool_depend>
</package>
